# APIGOLANGMAP/docs/swagger.yaml
@@ -31,8 +31,12 @@ definitions:
     properties:
       access_mode:
         type: integer
+      alertTime:
+        type: integer
       password:
         type: string
+      sos:
+        type: boolean
       userFriends:
         items:
           $ref: '#/definitions/model.Follower'
@@ -44,14 +48,50 @@ definitions:
       username:
         type: string
     type: object
-  model.Alert:
-    properties:
-      alertTime:
-        type: integer
-    type: object
 info:
   contact: {}
 paths:
+  /alert/time/:
+    put:
+      consumes:
+      - application/json
+      description: Atualiza a periodicidade de alerta determinando o tempo máximo
+        até dar uma pessoa como perdida
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Udpdate Alert
+        in: body
+        name: evaluation
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not found
+        "406":
+          description: Not acceptable
+      security:
+      - BearerAuth: []
+      summary: Atualiza a periodicidade de alerta
   /auth/login:
     post:
       consumes:
@@ -77,7 +117,7 @@ paths:
           description: Unauthorized
       summary: Realizar autenticação
   /auth/logout:
-    post:
+    put:
       consumes:
       - application/json
       description: Desautentica o utilizador invalidando o token atual
@@ -150,7 +190,7 @@ paths:
         "401":
           description: Unauthorized
       summary: Realizar registro
-  /follower:
+  /follower/:
     get:
       consumes:
       - application/json
@@ -202,9 +242,9 @@ paths:
               $ref: '#/definitions/model.Follower'
             type: array
         "400":
-          description: Bad request
+          description: Token Malformed, Check Syntax, Follower User ID Already Associated
         "404":
-          description: Not found
+          description: User Not found
       security:
       - BearerAuth: []
       summary: Associa um Follower(User) a um User
@@ -229,18 +269,75 @@ paths:
       - application/json
       responses:
         "200":
+          description: Deassociation Success
+        "400":
+          description: Token Malformed, Check Syntax
+        "404":
+          description: User Not found
+      security:
+      - BearerAuth: []
+      summary: Desassocia um Follower(User) de um User
+  /follower/following:
+    get:
+      consumes:
+      - application/json
+      description: Exibe a lista, sem todos os campos, de todos os users que estamos
+        a seguir
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
           description: OK
           schema:
             items:
               $ref: '#/definitions/model.Follower'
             type: array
-        "400":
-          description: Bad request
         "404":
           description: Not found
       security:
       - BearerAuth: []
-      summary: Desassocia um Follower(User) de um User
+      summary: Obtem os users que estamos a seguir
+  /follower/history:
+    post:
+      consumes:
+      - application/json
+      description: Obtem as localizações de um determinado Follower
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: get follower locations history
+        in: body
+        name: follower
+        required: true
+        schema:
+          $ref: '#/definitions/model.Position'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Position'
+            type: array
+        "400":
+          description: Token Malformed, Check Syntax, Dates Malformed
+        "401":
+          description: User not authorized to check given User locations.
+        "404":
+          description: 'User ID Not Found, '
+      security:
+      - BearerAuth: []
+      summary: Obtem as localizações de um Follower
   /position:
     get:
       consumes:
@@ -264,26 +361,26 @@ paths:
         "404":
           description: User Not found
       security:
-        - BearerAuth: [ ]
+      - BearerAuth: []
       summary: Obter a última localização do utilizador
     post:
       consumes:
-        - application/json
+      - application/json
       description: Cria uma localizacao de um utilizador em especifico
       parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: Add Location
-          in: body
-          name: evaluation
-          required: true
-          schema:
-            $ref: '#/definitions/model.Position'
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Add Location
+        in: body
+        name: evaluation
+        required: true
+        schema:
+          $ref: '#/definitions/model.Position'
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -294,46 +391,73 @@ paths:
         "404":
           description: Not found
       security:
-        - BearerAuth: [ ]
+      - BearerAuth: []
       summary: Adicionar uma localizaçao
   /position/{id}:
     delete:
       consumes:
-        - application/json
+      - application/json
       description: Exclui uma localização selecionada
       operationId: get-string-by-int
       parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: Position ID
-          in: path
-          name: id
-          required: true
-          type: integer
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Position ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: Delete succeeded!
         "404":
           description: None found!
       security:
-        - BearerAuth: [ ]
+      - BearerAuth: []
       summary: Exclui uma localização
+  /position/filter:
+    post:
+      consumes:
+      - application/json
+      description: Exibe a lista de localizações dos utilizadores
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Position'
+            type: array
+        "400":
+          description: User Token Malformed
+        "404":
+          description: Location Not found
+      security:
+      - BearerAuth: []
+      summary: Obtem todas as localizações dos utilizadores com filtros
   /position/history:
     get:
       consumes:
-        - application/json
+      - application/json
       description: Exibe a lista de todas as localizações do utilizador
       parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -348,63 +472,178 @@ paths:
         "404":
           description: User Not found
       security:
-        - BearerAuth: [ ]
+      - BearerAuth: []
       summary: Obtem todas as localizações do utilizador
-  /alert/time:
-    put:
+  /position/history/user:
+    post:
       consumes:
-        - application/json
-      description: Atualiza a periodicidade de alerta
+      - application/json
+      description: Obtem todas as localizações do utilizador
       parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: Update Alert Time
-          in: body
-          name: alertTime
-          required: true
-          schema:
-            $ref: '#/definitions/model.Alert'
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Alert'
+            items:
+              $ref: '#/definitions/model.Position'
+            type: array
         "400":
-          description: Bad request
+          description: Check Syntax, Dates Malformed
         "404":
-          description: Not found
-        "406":
-          description: Not acceptable
+          description: UserID Not found
       security:
-        - BearerAuth: [ ]
-      summary: Atualiza a periodicidade de alerta
-  /socket:
+      - BearerAuth: []
+      summary: Obtem todas as localizações do utilizador
+  /user/:
     get:
       consumes:
-        - application/json
-      description: Inicia todos os recursos necessario para a criação de uma webSocket
-        com o cliente
+      - application/json
+      description: Exibe a lista, sem todos os campos, de todos os Users
       parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
-          description: Connection confirm
-        "400":
-          description: User Token Malformed
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.User'
+            type: array
         "404":
-          description: Connection failed
+          description: Not found
       security:
-        - BearerAuth: [ ]
-      summary: Iniciar conecção com a webSocket
+      - BearerAuth: []
+      summary: Obtem todos os  Users
+  /user/alert-time:
+    get:
+      consumes:
+      - application/json
+      description: Obter o tempo para alertas definido pelo utilizador
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: int
+        "400":
+          description: Bad request
+      security:
+      - BearerAuth: []
+      summary: Obter o tempo para alertas definido pelo utilizador
+  /user/info:
+    get:
+      consumes:
+      - application/json
+      description: Obter a informação do utilizador
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad request
+      security:
+      - BearerAuth: []
+      summary: Obter a informação do utilizador
+  /user/last-positions:
+    get:
+      consumes:
+      - application/json
+      description: Exibe a lista, sem todos os campos, da última posição/localização
+        de cada User
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.User'
+            type: array
+        "404":
+          description: Not found
+      security:
+      - BearerAuth: []
+      summary: Obtem última posição/localização de cada User
+  /user/search:
+    get:
+      consumes:
+      - application/json
+      description: Exibe a lista, sem todos os campos, de Users dado um username
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.User'
+            type: array
+        "400":
+          description: Token Malformed
+      security:
+      - BearerAuth: []
+      summary: Obter Users dado um username
+  /user/sos:
+    post:
+      consumes:
+      - application/json
+      description: Alterar para on/off o estado do SOS do utilizador
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: bool
+        "400":
+          description: Bad request
+      security:
+      - BearerAuth: []
+      summary: Alterar estado do SOS
 swagger: "2.0"
