# APIGOLANGMAP/routes/user.go
@@ -5,15 +5,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary Obtem os Followers
-// @Description Exibe a lista, sem todos os campos, de todos os followers
+// @Summary Obter Users dado um username
+// @Description Exibe a lista, sem todos os campos, de Users dado um username
 // @Accept  json
 // @Produce  json
 // @Security BearerAuth
 // @param Authorization header string true "Token"
 // @Success 200 {array} model.User
-// @Router /follower [get]
-// @Failure 404 "Not found"
+// @Router /user/search [get]
+// @Failure 400 "Token Malformed"
 func SearchUsersByUsername(c *gin.Context) {
 	controllers.SearchUsersByUsername(c)
 }
@@ -25,7 +25,7 @@ func SearchUsersByUsername(c *gin.Context) {
 // @Security BearerAuth
 // @param Authorization header string true "Token"
 // @Success 200 {array} model.User
-// @Router / [get]
+// @Router /user/ [get]
 // @Failure 404 "Not found"
 func GetAllUsers(c *gin.Context) {
 	controllers.GetAllUsers(c)
@@ -38,23 +38,47 @@ func GetAllUsers(c *gin.Context) {
 // @Security BearerAuth
 // @param Authorization header string true "Token"
 // @Success 200 {array} model.User
-// @Router /last-positions [get]
+// @Router /user/last-positions [get]
 // @Failure 404 "Not found"
 func GetUsersLastLocation(c *gin.Context) {
 	controllers.GetUsersLastLocation(c)
 }
 
-// TODO swagger
+// @Summary Alterar estado do SOS
+// @Description Alterar para on/off o estado do SOS do utilizador
+// @Accept  json
+// @Produce  json
+// @Security BearerAuth
+// @param Authorization header string true "Token"
+// @Success 200 {bool} sos state
+// @Router /user/sos [post]
+// @Failure 400 "Bad request"
 func ChangeSOSState(c *gin.Context) {
 	controllers.ChangeSOSState(c)
 }
 
-// TODO swagger
+// @Summary Obter a informação do utilizador
+// @Description Obter a informação do utilizador
+// @Accept  json
+// @Produce  json
+// @Security BearerAuth
+// @param Authorization header string true "Token"
+// @Success 200 {object} model.User
+// @Router /user/info [get]
+// @Failure 400 "Bad request"
 func GetUserInfo(c *gin.Context) {
 	controllers.GetUserInfo(c)
 }
 
-// TODO swagger
+// @Summary Obter o tempo para alertas definido pelo utilizador
+// @Description Obter o tempo para alertas definido pelo utilizador
+// @Accept  json
+// @Produce  json
+// @Security BearerAuth
+// @param Authorization header string true "Token"
+// @Success 200 {int} AlertTime
+// @Router /user/alert-time [get]
+// @Failure 400 "Bad request"
 func GetAlertTime(c *gin.Context) {
 	controllers.GetAlertTime(c)
 }
